mdapi/objects/Anno_Reportistica__c/Anno_Reportistica__c.object-meta.xml
<CustomObject>
    <label>Anno Reportistica</label>
    <nameField>
        <label>Anno di Reportistica</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anni Reportistica</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>