mdapi/objects/Anno_Reportistica__c/fields/Ammontare_Disponibile__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Disponibile__c</fullName>
    <label>Ammontare NON Fatturato</label>
    <summarizedField>Reporting_Year__c.Available_Amount__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>