mdapi/objects/Anno_Reportistica__c/fields/Ammontare_Distribuzioni_Pagate__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Distribuzioni_Pagate__c</fullName>
    <label>Ammontare Distribuzioni Pagate</label>
    <summarizedField>Overview_Budget_per_Anno__c.Totale_Distribuito_Pagato__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Anno_Reportistica__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>