mdapi/objects/Anno_Reportistica__c/fields/Ammontare_Donazioni_Anno_Corrente__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Donazioni_Anno_Corrente__c</fullName>
    <label>Ammontare Donazioni Anno Corrente</label>
    <summarizedField>Reporting_Year__c.Current_Year_Donation_Amount__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>