mdapi/objects/Anno_Reportistica__c/fields/Ammontare_Originale_Donato__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Originale_Donato__c</fullName>
    <label>Ammontare Originale Donato</label>
    <summarizedField>Reporting_Year__c.Ammontare_Originale_Donato_Anno_Corrente__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>