mdapi/objects/Anno_Reportistica__c/fields/Totale_Allocabile__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocabile__c</fullName>
    <label>Totale Allocabile</label>
    <summarizedField>Reporting_Year__c.Current_Year_Donation_Amount__c</summarizedField>
    <summaryForeignKey>Reporting_Year__c.Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>