mdapi/objects/Anno_Reportistica__c/fields/Totale_Numero_Biglietti__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Biglietti__c</fullName>
    <label>Totale Numero Biglietti</label>
    <summarizedField>Overview_Budget_per_Anno__c.Totale_Numero_Biglietti__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Anno_Reportistica__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>