mdapi/objects/Anno_Reportistica__c/fields/Totale_Visite_Budgets__c.field-meta.xml
<CustomField>
    <fullName>Totale_Visite_Budgets__c</fullName>
    <label>Totale Visite</label>
    <summarizedField>Overview_Budget_per_Anno__c.Totale_Numero_di_Visite__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Anno_Reportistica__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>