mdapi/objects/Anno_Reportistica__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Programma__c</columns>
    <columns>Ammontare_Originale_Donato__c</columns>
    <columns>Ammontare_Donazioni_Anno_Corrente__c</columns>
    <columns>Ammontare_Distribuzioni__c</columns>
    <columns>Totale_Fatturato_Budgets__c</columns>
    <columns>Totale_Minuti_Visite_Budgets__c</columns>
    <columns>Totale_Visite_Budgets__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>